# CareChain

./: .gitignore  CONTRACT_TEST_GUIDE.md  README.md  package-lock.json
backend/: README.md  pom.xml
contract/: README.md
contract/carechain/: Anchor.toml  NFT铸造说明.md  dynamic_nft_metadata_architecture.md  package.json  priority_queue_yield_vault_backend_前端请求文档.md  priority_queue_yield_vault_前端调用文档.md  前端测试指南.md
contract/carechain/app/: package-lock.json  package.json  vite.config.ts
contract/carechain/programs/carechain/: Cargo.toml
contract/carechain/programs/carechain/src/: errors.rs  lib.rs
contract/carechain/programs/carechain/src/instructions/: create_bed_class.rs  initialize_facility.rs  mint_bedright_nft.rs  mod.rs
contract/carechain/programs/carechain/src/state/: bed_class.rs  bed_position.rs  facility.rs  mod.rs
contract/carechain/tests/: carechain.ts  priority-queue.ts  yield-vault.ts
doc/设计图/: CareChain API & Data Interaction Spec.md  CareChain Protocol — 养老地产 RWA 产品设计大纲 v3.0.md  CareChain Prototype-Driven Backend Design.md  PriorityQueue 合约设计方案.md  YieldContract 设计方案.md  carechain.drawio
frontend/: .env  .env.local.example  .gitignore  README.md  codama.json  components.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/.claude/: CLAUDE.md  context.md  style.md
frontend/.codex/: AGENTS.md
frontend/src/: proxy.ts
frontend/src/anchor/: setup.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: wallet-address.tsx  wallet-connection.tsx
(+222 files in other folders)
